--- a/tests/mock_telegram/frontend/index.html
+++ b/tests/mock_telegram/frontend/index.html
@@ -315,7 +315,7 @@
         let ws = null;
         
         // API base URL
-        const API_BASE = 'http://localhost:8001';
+        const API_BASE = 'http://localhost:8001/api';
         
         // Initialize the application
         async function init() {
